# Adventofcode

./: pyproject.toml
2023/day02/: round1.py  round2.py
2023/day03/: round1.py  round2.py
2023/day04/: input.txt  round1.py  round2.py
2023/day05/: Day 5 - Advent of Code 2023.html  input.txt
2023/day06/: input.txt  round1.py  round2.py
2023/day07/: Day 7 - Advent of Code 2023.html  input.txt
2023/day08/: round1.py  round2.py
2023/day09/: input.txt  round1.py  round2.py
2023/day10/: Day 10 - Advent of Code 2023.html  funcs.py  round1.py
2023/day11/: Day 11 - Advent of Code 2023.html  input.txt  round1.py  round2.py  test.ipynb  test.py
2023/day12/: Day 12 - Advent of Code 2023.html  input.txt  test.ipynb
2023/day13/: Day 13 - Advent of Code 2023.html  round1.py  test.ipynb
2024/01/: 01.py  01_solution.py
2024/01/__marimo__/session/: 01.py.json
__marimo__/session/: 01.py.json
day02/: round2.py
day03/: round2.py
day07/: Day 7 - Advent of Code 2023.html
day08/: round2.py  tests.ipynb
day09/: round2.py
day10/: Day 10 - Advent of Code 2023.html  funcs.py  round1.py  test.ipynb
day11/: Day 11 - Advent of Code 2023.html  round1.py  round2.py  test.ipynb  test.py
day11/.ipynb_checkpoints/: test-checkpoint.ipynb
day12/: Day 12 - Advent of Code 2023.html
day2/: round1.py  round2.py
day3/: round1.py  round1_again.py  test.ipynb  test.txt
day3/.ipynb_checkpoints/: test-checkpoint.ipynb
day4/: round1.py  round2.py
day5/: Day 5 - Advent of Code 2023.html
day6/: round1.py  round2.py
day8/: round1.py  tests.ipynb
day9/: round1.py
(+4 files in other folders)
