[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = "I miei tentativi di risolvere i puzzle del gioco"
authors = ["Jonathan Bonetti"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
